kubernetes/project/manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels: 
    app: vproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
      - name: vproapp
        image: vprocontainers/vprofileapp
        ports:
        - name:  vpro-app-port
          containerPort: 8080

      # here using it to make sure other services are available before the app containers runs
