kubernetes/project/manifests/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: vprocontainers/vprofiledb
        volumeMounts:
          - name:  vpro-db-data
            mountPath:  /var/lib/mysql
        ports:
        - name:  vpro-db-port
          containerPort:  3006
      volumes:
        - name:  vpro-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim

      #specialized containers that run before the main application containers within a Pod
      # here using it because to mount the path that path should be empty but here in ebs when the volume is created it create the 'loat+found' folder hence first we need to delete that folder then need to count to main container
