kubernetes/project/manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  vpro-app-service #this is used in ingress controller
spec:
  selector:
    app: vproapp # any pod with albel app:vproapp
  type: ClusterIP # for internal use
  ports:
  - name:  vpro-app-service-port
    port:  8080
    targetPort:  vpro-app-port
    protocol: TCP
