kubernetes/project/manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  vprodb  #this should be the name that in application properties
spec:
  selector:
    app: vprodb # any pod with albel app:vprodb
  type: ClusterIP # for internal use
  ports:
  - name:  vpro-db-service-port
    port:  3306
    targetPort:  vpro-db-port
    protocol: TCP
