kubernetes/project/manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: vprofile.manojm.site #when user try to access the link then ingress 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: vpro-app-servie  #name of app service
            port: 
              number: 8080
